<resources>
    <string name="app_name">Chronicles Of WW2</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="prep">Prepared</string>
    <string name="custom">Custom</string>
    <string name="welcome">Welcome!</string>
    <string name="start_campaign">Campaign</string>
    <string name="host">Make Host</string>
    <string name="join">Join game</string>
    <string name="new_scenario">Create new scenario</string>
    <string name="show_mission_list">List of Missions</string>
    <string name="choose_mission">Choose Mission</string>
    <string name="scenario_title">Title of the scanario</string>
    <string name="scenario_intro">Intro of the scenario</string>
    <string name="nations">Nations</string>
    <string name="infantry">Infantry</string>
    <string name="armored">Armored</string>
    <string name="artillery">Artillery</string>
    <string name="done">Done</string>
    <string name="load_game">Load game</string>
    <string name="waiting_for_accepted">Waiting for host to accept</string>
    <string name="cancel_request_for_accepted">Cancel request</string>
    <string name="choose_host_name">Type in host name</string>
    <string name="set_host_parameters">Set host parameters</string>
    <string name="default_mission">Play default mission</string>
    <string name="hostReady">Ready</string>
    <string name="overview">Overview</string>
    <string name="ipAddress">IP-Address: $</string>
    <string name="port">Port: </string>
    <string name="connect">Connect</string>
    <string name="clientName">Your name</string>
    <string name="finding">Finding</string>
    <string name="found">Found yay</string>
    <string name="not_found">No hosts found</string>
    <string name="turn_wifi">Please, turn on the Wi-Fi</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="error_start_listening">Error when start listening</string>
    <string name="waiting_for_connected">Waiting for connected</string>
    <string name="connection_refused">Connection refused</string>
    <string name="error_connectiong">Error when connecting</string>
    <string name="fill_the_gaps">Fill the gaps</string>
    <string name="resolve_failed">Resolve Failed</string>
    <string name="discovery_failed">Discovery Failed</string>
    <string name="you_won">You won!!! )))))</string>
    <string name="you_lose">You lose. (((((</string>
    <string name="set_password">Set Password</string>
    <string name="password">Password</string>
    <string name="game_with_password">Host requires password</string>
    <string name="web_game">Web game</string>
    <string name="local_game">Local game</string>
    <string name="join_game">Join game</string>
    <string name="create_game">Create game</string>
    <string name="save_and_done">Save and Done</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="ai_game">ai game</string>
    <string name="find_game_by_id">Find game by ID</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="client_init_error_message_local">U need 2b connected to wi fi</string>
    <string name="delete">Delete</string>
    <string name="standard_battles">Standard Battles</string>
    <string name="saved_battles">Saved Battles</string>
    <string name="other_users_battles">Other Users\' Battles</string>
    <string name="non_network_game">Non-network game</string>
    <string name="height">Height</string>
    <string name="board_size">Board size</string>
    <string name="width">Width</string>
    <string name="cancel">Cancel</string>
    <string name="connection_request">Connection request: %1$s</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="client_init_error_message_remote">Something went wrong</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="repeat_password">Repeat new password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="ready">Ready</string>
    <string name="delete_account">Delete account</string>
    <string name="login">Login</string>
    <string name="saved">Saved</string>
    <string name="published">Published</string>
    <string name="publish">Publish</string>
    <string name="select">Select</string>
    <string name="publish_battles">publish battles</string>
    <string name="not_chosen">Not chosen</string>
    <string name="log_in">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="battles_management">Battles management</string>
    <string name="new_battle">New battle</string>
    <string name="nation_britain">Great Britain</string>
    <string name="nation_france">France</string>
    <string name="nation_default">Default</string>
    <string name="nation_germany">Germany</string>
    <string name="nation_italy">Italy</string>
    <string name="nation_japan">Japan</string>
    <string name="nation_usa">USA</string>
    <string name="nation_ussr">USSR</string>
    <string name="first_player_have_won">First player have won</string>
    <string name="second_player_have_won">Second player have won</string>
    <string name="match">Match</string>
    <string name="start_matching">Start matching</string>
    <string name="found_a_match_for_you">Found a match for you</string>
    <string name="stop_matching">Stop matching</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="you">You</string>
    <string name="found_match">Found match</string>
    <string name="timeout">Timeout</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="error">Error</string>
    <string name="rejected">Rejected</string>
    <string name="same_nations">Same nations as enemies</string>
    <string name="too_little_divisions">Too little divisions</string>
    <string name="game_data_not_obtained">Game data not obtained</string>
    <string name="need_wi_fi">U need to connect to wi fi network</string>
    <string name="need_signed_in">Login first (in Settings)</string>
    <string name="listening_start_error">Listening start error</string>
    <string name="connection_cancelled">Connection cancelled</string>
    <string name="not_same_password_and_repeat_password">Not same text in password and repeat password</string>

</resources>