<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login" />


    <EditText
        android:id="@+id/current_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password" />


    <EditText
        android:id="@+id/repeat_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password" />

    <Button
        android:id="@+id/ready_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ready" />


</LinearLayout>