<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/standard_battles_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/standard_battles"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/local_custom_battles_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/saved_battles"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/remote_custom_battles_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/other_users_battles"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/battle_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/colorWhite"
        android:padding="2dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="2dp">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_mission"
        android:id="@+id/default_mission_button"
        android:background="@drawable/drawable_button"
        >
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom"
        android:id="@+id/custom_mission_button"
        android:background="@drawable/drawable_button"
        >
    </Button>

</LinearLayout>