<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <EditText
        android:padding="6dp"
        android:id="@+id/current_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password"
        />

    <EditText
        android:padding="6dp"
        android:id="@+id/new_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"/>

    <EditText
        android:id="@+id/repeat_password_edit_text"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_new_password"/>

    <Button
        android:id="@+id/ready_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ready" />


</LinearLayout>