<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/scenario_title"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/intro_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/scenario_intro"
        android:inputType="textMultiLine"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="@+id/nation1_spinner"
        app:layout_constraintStart_toEndOf="@+id/nation1_spinner"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nations"
        android:textAlignment="center"
        android:textColor="@color/black_overlay"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/nation1_spinner"
        app:layout_constraintStart_toEndOf="@+id/nation1_spinner"
        app:layout_constraintTop_toBottomOf="@+id/intro_edit_text" />


    <Spinner
        android:id="@+id/nation1_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black_overlay"
        app:layout_constraintEnd_toStartOf="@+id/nation2_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/infantry1_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/infantry"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/infantry2_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/infantry2_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/armored1_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/armored"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/armored2_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/armored2_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/artillery1_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/artillery"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/artillery2_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/artillery2_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />


    <Spinner
        android:id="@+id/nation2_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nation1_spinner"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/infantry2_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/infantry"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/infantry1_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/nation1_spinner"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/armored2_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/armored"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/armored1_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/infantry1_edit_text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/artillery2_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/artillery"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/artillery1_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/armored1_edit_text"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/ready_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintBaseline_toBaselineOf="@+id/ready_and_save_button"
        app:layout_constraintEnd_toStartOf="@+id/ready_and_save_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ready_and_save_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_and_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ready_button"
        app:layout_constraintTop_toBottomOf="@+id/artillery1_edit_text" />


</androidx.constraintlayout.widget.ConstraintLayout>