<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_gravity="center_horizontal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/saved_battles_button"
            android:text="@string/saved"
            />

        <Space
            android:layout_gravity="center_horizontal"
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_gravity="center_horizontal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/published_battles_button"
            android:text="@string/published"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/publish_battles"
            android:src="@drawable/ic_publish"
            android:padding="8dp"
            android:visibility="gone"
            />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/battles_recycler_view"
        />

</LinearLayout>