<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chooseHostName"
        android:textAlignment="center"
        android:text="@string/set_host_parameters">
    </TextView>

    <EditText
        android:paddingVertical="6dp"
        android:background="@drawable/drawable_button"
        android:textSize="22sp"
        android:id="@+id/host_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_password"
        android:textAlignment="center"
        android:lines="1">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/colorWhite"
            android:id="@+id/chosen_scenario_text_view"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:text="Not chosen">
        </TextView>


        <Button
            android:text="@string/choose_mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/choose_battle_button"
            android:background="@drawable/drawable_button">
        </Button>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game_data_fragment"
        >

        <fragment
            tools:layout="@layout/fragment_game_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.kursor.chroniclesofww2.presentation.ui.fragments.features.game.GameDataFragment"
            />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:background="@drawable/drawable_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hostReady"
            android:id="@+id/ready_button">
        </Button>

        <include
            android:id="@+id/layout_connection_request"
            layout="@layout/layout_connection_request"
            android:visibility="gone"
            />
        <include
            android:id="@+id/layout_waiting_for_connections"
            layout="@layout/layout_waiting_for_connections"
            android:visibility="gone"
            />

    </LinearLayout>




</LinearLayout>