<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Username: "
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:inputType="text"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/signed_in_layout"
                    android:visibility="gone"
                    >

                    <TextView
                        android:paddingStart="12sp"
                        android:paddingEnd="34sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="22sp"
                        android:text="Login: "
                        />

                    <TextView
                        android:id="@+id/login_text_view"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:textSize="22sp"
                        />

                    <Button
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/log_out_button"
                        android:text="@string/log_out"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/change_password_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/not_signed_in_layout"
            >

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/login_button"
                android:text="Log in"
                />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/register_button"
                android:text="Register"

                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/saved_battles_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_battles"
        />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>